syntax = "proto3";

option go_package = "grpc/golangServer/proto";


package generalwrapper;

service GeneralWrapperService {
  rpc RequestModuleContext (ContextRequest) returns (ModuleContext) {}
  rpc RequestGeneralHealthCheck (StatusRequest) returns (Evaluation) {}
  rpc RunSystemCommand (SystemCommand) returns (Confirmation) {}
}

message ContextRequest {
  string message = 1;
}

message ModuleContext {
  string reference = 1;
}

message StatusRequest {
  string message = 1;
}

message Evaluation {
  bool sysctlIsRunning = 1;
  bool connectionsAreStable = 2;
}

message SystemCommand {
  string body = 1;
}

message Confirmation {
  bool completed = 1;
  string errorMessage = 2;
}

